--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>Test</h1>
-<a href="/Notes/Obsidian20%Vault/General/README.md"> readme </a>
+<a href="/Notes/Obsidian%20Vault/General/README.md"> readme </a>
